--- a/howl/index.html
+++ b/howl/index.html
@@ -40,7 +40,7 @@
       $('body').append("<canvas width=" + width + " height= " + height + "></canvas>")
 
       var queue = [],
-          interval = 198,
+          interval = 128,
           canvas = $('canvas')[0],
           entry = $('input[type=text]')[0],
           ctx = canvas.getContext('2d');
@@ -52,14 +52,14 @@
         queue.push(words);
       });
 
-      function render(poem,x,y) {
+      function render(poem) {
         ctx.fillStyle = "rgba(250,250,250,0.1)";
         ctx.fillRect(0,0,ctx.canvas.width,ctx.canvas.height);
         ctx.fillStyle = "#111";
 
         var text = poem,
-               x = x || Math.random()*1/3*ctx.canvas.width,
-               y = y || Math.random()*ctx.canvas.height;
+               x = 10+Math.random()*1/2*ctx.canvas.width,
+               y =  20+Math.random()*(ctx.canvas.height-20);
 
         ctx.fillText(text, x, y);
       };
